# spatial-playground

./: .gitignore  README.md
AreaTest/: main.cpp
AreaTest/spatial/: main.cpp  mainwindow.cpp  spatial.pro  spatial.py  test.cpp
DrawTest/: CMakeLists.txt  DrawingView.hpp  main.cpp
SpatialLib/: CMakeLists.txt
SpatialLib/src/: Area.hpp
SpatialLib/tests/: test.cpp
